# ADSL

./: .gitignore  ABLATION_MATRIX.csv  EXPERIMENTAL_DESIGN.md  EXPERIMENT_LOG_TEMPLATE.csv  README.md  RUNBOOK.md  pyproject.toml
configs/ablations/: pilot_cartpole.yaml
configs/experiments/: baseline_halfcheetah.yaml  h3_pendulum_attack_defended.yaml  h3_pendulum_attack_none.yaml  h3_pendulum_clean.yaml  minimal_cartpole.yaml  minimal_pendulum.yaml
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  DISSERTATION_READY.md  METHODOLOGY_DRAFT.md  README_WINDOW200.md  REPRODUCIBILITY.md
experiments/: canonical_experiments.json
notebooks/: 01_results_dashboard.py
results/dissertation/: detector_learning_linkage.csv  detector_learning_linkage.md  hypothesis_support_summary.csv  mcts_final_report_200k.md  poisoned_cell_support_matrix.csv
results/runs/: summary.csv
scripts/: analyze_detector_hypotheses.py  analyze_dissertation_results.py  build_dashboard.py  build_iforest_window200_report.py  build_window200_report.py  export_databricks_runs.py  export_visual_datasets.py  run_ablation_matrix.py  run_detector_hypotheses.py  run_dissertation_campaign.py  run_experiment.py  run_iforest_detector_baseline.py  run_parameterized_campaign.py  run_window200_worker_pool.py  train_experts.py  validate_research_artifact.py
src/adsl/: cli.py  config.py  control.py  corruption.py  data.py  (+11 more)
src/adsl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_control.py  test_corruption.py  test_detection.py  test_early_stopping.py  test_pipeline_metrics.py  test_schedule_controls.py
(+3841 files in other folders)
